Fix: bio rewrite, photo alignment, journal bold+italic, add 5th paper, shrink numbering gap, hide RSS

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,28 +1,25 @@
 /* Hide search in navbar */
-.navbar .search-icon,
-nav .search-bar,
-[aria-label="Search"],
-button[aria-label="search"],
 #search-icon,
-.search-icon {
+.search-icon,
+nav [data-search],
+[class*="search"] {
   display: none !important;
 }
 
-/* Hide RSS icon in socials */
-.social a[href*="feed.xml"],
-.social a i.fa-rss,
-.social .fa-rss,
-a[href$="/feed.xml"] {
+/* Hide RSS icon */
+a[href*="feed.xml"],
+a[href$="/feed.xml"],
+.contact-icons a[href*="feed.xml"],
+.social a[href*="feed"] {
   display: none !important;
 }
 
-/* Photo align top */
-header .profile {
-  margin-top: 0 !important;
-  padding-top: 0 !important;
+/* Photo align with name - move up */
+.profile {
+  margin-top: -2.5em !important;
 }
 
-/* Paper numbering */
+/* Paper numbering - compact spacing */
 .publications ol.bibliography,
 .publications .bibliography {
   counter-reset: pub-counter;
@@ -34,32 +31,11 @@ header .profile {
 .publications .bibliography > li {
   counter-increment: pub-counter;
   position: relative;
-  padding-left: 2.8em !important;
+  padding-left: 2em !important;
 }
 
 .publications ol.bibliography > li::before,
 .publications .bibliography > li::before {
-  content: "[" counter(pub-counter) "] ";
-  position: absolute;
-  left: 0;
-  font-weight: 600;
-}
-
-/* About page compact paper list */
-article.about .publications ol.bibliography > li,
-article.about .publications .bibliography > li {
-  padding-left: 2.8em !important;
-}
-
-article.about .publications ol.bibliography,
-article.about .publications .bibliography {
-  counter-reset: pub-counter;
-  list-style: none !important;
-  padding-left: 0 !important;
-}
-
-article.about .publications ol.bibliography > li::before,
-article.about .publications .bibliography > li::before {
   content: "[" counter(pub-counter) "] ";
   position: absolute;
   left: 0;
